<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="pax">No. of Pax</string>
    <string name="no_svs">NO SVS</string>
    <string name="include_svs">SVS</string>
    <string name="include_gst">GST</string>
    <string name="no_gst">NO GST</string>
    <string name="discount">Discount (%)</string>
    <string name="btn_Split">SPLIT</string>
    <string name="btn_Reset">RESET</string>
    <string name="totalBill"></string>
    <string name="eachPays"></string>
</resources>